# cryxtels

./: .gitignore  AUTHORS  CMakeLists.txt  FindSDL2.cmake  Makefile.am  Makefile.bak  Makefile.in  README.md  build-wasm.sh  configure  configure.ac  crystal pixels.txt  pixels definition.txt  readme new.txt  run
.github/workflows/: ci.yml  release.yml
include/: conf.h  draw.h  dsp.h  fast3d.h  global.h  ini_parser.hpp  input.h  intro.h  primitives.h  scanline.h  sdl_exception.h  text3d.h  transition.h  utils.h
source/: Makefile.am  Makefile.in  conf.cpp  cryxtels.cpp  draw.cpp  dsp.cpp  dsp.stub.cpp  fast3d.cpp  global.cpp  input.cpp  intro.cpp  scanline.cpp  text3d.cpp  transition.cpp  utils.cpp
